Split the models up
