# docs/swagger.json
@@ -22,6 +22,17 @@
                     "items"
                 ],
                 "summary": "Create an item",
+                "parameters": [
+                    {
+                        "description": "Item to create",
+                        "name": "item",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/main.ItemRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "201": {
                         "description": "Created",
@@ -97,6 +108,20 @@
     },
     "definitions": {
         "main.Item": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "value": {
+                    "type": "string"
+                }
+            }
+        },
+        "main.ItemRequest": {
             "type": "object",
             "properties": {
                 "name": {
